--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,15 +49,14 @@ jobs:
 
       - name: Create archive of dependencies
         run: |
-          cd ./venv/lib/python3.7/site-packages
-          zip -r9 ../../../../api.zip .
-      - name: Add API files to Zip file
-        run: cd ./api && zip -g ../api.zip -r .
+          cd ./
+          mkdir archive
+          zip -r9 ./archive/api.zip .
       - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
           name: api
-          path: api.zip
+          path: ./archive/api.zip
 
   CD:
     runs-on: ubuntu-latest
@@ -77,7 +76,7 @@ jobs:
         with:
           name: api
       - name: Upload to S3
-        run: aws s3 cp api.zip s3://fastapi123718237193712983/api.zip
+        run: aws s3 cp archive/api.zip s3://fastapi123718237193712983/api.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
