--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 COIN_API=3913751D-5F8B-4A99-9DBC-67892BED79C3
 INITIAL_DATETIME_DEF=2022-05-01T00:00:00
 LIMIT=10000
+SQLALCHEMY_DATABASE_URL=mysql+pymysql://admin:1q2w3e4r5t@crypto.cztrbrxes3k3.us-east-1.rds.amazonaws.com/crypto
