--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ SQLAlchemy==1.4.42
 uvicorn==0.19.0
 python-dotenv==0.21.0
 gunicorn
-pycurl-requests
+requests
 sentry-sdk==1.10.1
 sentry-sdk[fastapi]
