--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+API_KEY=5b50bc27-2dc5-4f8b-bf34-7626e739d63d
 COIN_API=3913751D-5F8B-4A99-9DBC-67892BED79C3
 INITIAL_DATETIME_DEF=2022-05-01T00:00:00
 LIMIT=10000
